multiple classifier exp

--- a/notebook/MODEL.ipynb
+++ b/notebook/MODEL.ipynb
@@ -509,23 +509,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 654,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# arr2=np.array([[21,234,54,],[6,54,676],[]])\n",
-    "# np.sort(arr2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 655,
    "metadata": {},
    "outputs": [
@@ -708,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -939,13 +922,13 @@
        "4                     2.288  33.0        1  "
       ]
      },
-     "execution_count": 665,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df =pd.read_csv('D:\\@Techthings\\ML_Project\\Machine_Learning\\Dataset\\Diabetes data.csv')\n",
+    "df =pd.read_csv('Diabetes data.csv')\n",
     "df.head()"
    ]
   },
@@ -2049,16 +2032,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 677,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BloodPressure=grouped_data['BloodPressure'].mean()\n",
-    "# BloodPressure"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2757,24 +2730,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df['BloodPressure'].fillna(df['BloodPressure'].mean()).count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 701,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df['Glucose'].fillna(df['Glucose'].mean()).count()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 702,
    "metadata": {},
    "outputs": [
@@ -2803,42 +2758,6 @@
    ],
    "source": [
     "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 703,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 704,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_cleaned = df.dropna(subset=['Glucose', 'BloodPressure'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 705,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rows_with_missing_values = df[df.isnull().any(axis=1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 706,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# row_with_missing_value=df[df.isnull(), any(axis=1)]"
    ]
   },
   {
@@ -3154,16 +3073,6 @@
    "source": [
     "x=df.drop('Outcome', axis=1)\n",
     "y=df['Outcome']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 714,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.model_selection import train_test_split\n",
-    "# x_train, x_test, y_train, y_test=train_test_split(x,y, test_size=0.25, random_state=42)"
    ]
   },
   {
